--- a/.env
+++ b/.env
@@ -12,8 +12,9 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='adguid.ae'
-DB_USERNAME='root'
-DB_PASSWORD=''
+DB_USERNAME='sofa-cart'
+DB_PASSWORD='V!!LR7RF2*Eg'
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
