--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=alzahrani
+APP_NAME=adguid
 APP_ENV=local
 APP_KEY=base64:qK1We0c0W9jjzsl79/2F780kIQ5dodYeeZdalI9hyjc=
 APP_DEBUG=true
-APP_URL=lzahrani-for-cars.com
+APP_URL=https://adguid.ae
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE='adguid.ae'
-DB_USERNAME='root'
-DB_PASSWORD=''
+DB_USERNAME='sofa-cart'
+DB_PASSWORD='V!!LR7RF2*Eg'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
