--- a/.env
+++ b/.env
@@ -58,5 +58,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DEVELOPER_NAME=Mostafa-Elbagory
-DEVELOPER_LINK=https://wa.me/201001995914
+DEVELOPER_NAME=Adguid
+DEVELOPER_LINK=#
