--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=adguid
+APP_NAME=Amazing
 APP_ENV=local
 APP_KEY=base64:qK1We0c0W9jjzsl79/2F780kIQ5dodYeeZdalI9hyjc=
 APP_DEBUG=true
-APP_URL=https://adguid.ae
+APP_URL=https://Amazing.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,10 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE='ServiceSite'
-DB_USERNAME='root'
-DB_PASSWORD=''
-
+DB_DATABASE='rimsaegj_demo_serves'
+DB_USERNAME='rimsaegj_sofa_api'
+DB_PASSWORD=f.=0f![@YFvp
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
@@ -58,5 +57,5 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DEVELOPER_NAME=Adguid
+DEVELOPER_NAME=Amazing
 DEVELOPER_LINK=#
