--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "hisorange/browser-detect": "^5.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
@@ -24,7 +25,9 @@
     },
     "autoload": {
         "files": [
-            "app/helpers.php" 
+            "app/Helpers/helpers.php" ,
+            "app/Helpers/TranslationHelper.php" 
+            
         ] ,
         "psr-4": {
             "App\\": "app/",
