--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE='rimsaegj_demo_serves'
-DB_USERNAME='rimsaegj_sofa_api'
-DB_PASSWORD=f.=0f![@YFvp
+DB_DATABASE='ServiceSite'
+DB_USERNAME='root'
+DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
